Añadido el menu tipo overflow

--- a/EjemploBaseDatos/app/src/main/res/values/strings.xml
+++ b/EjemploBaseDatos/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">EjemploBaseDatos</string>
+    <string name="app_name">Tratamiento BD</string>
 </resources>
